fixing margin botton for work grids 1 & 2 on mobile

--- a/css/uxrodrigo.webflow.css
+++ b/css/uxrodrigo.webflow.css
@@ -7750,14 +7750,14 @@ figcaption {
   .works-grid-1 {
     width: 100%;
     max-width: none;
-    margin-bottom: 48px;
-    grid-row-gap: 48px;
+    margin-bottom: 0px;
+    grid-row-gap: 0px;
   }
 
   .works-grid-2 {
     width: 100%;
     margin-left: 0%;
-    grid-row-gap: 48px;
+    grid-row-gap: 0px;
   }
 
   .counter {
